GEO: Section 3 done

--- a/2021_22/GEO/notes/notes.tex
+++ b/2021_22/GEO/notes/notes.tex
@@ -32,8 +32,8 @@
     A \emph{basis} of a vector space $V$ is a set $\{\vec e_i \in V : i = 1, ..., n\}$
     with the following properties:
     \begin{itemize}
-        \item Spans $V$: for all $\vec v\in V, \vec v = \sum_{i=1}^n v_i \vec e_i$, for some $v_i\in\R$.
-        \item Linearly independent: $\sum_{i=1}^n a_i\vec e_i = 0$ implies $a_i = 0$ for all $i=1,...,n$.
+        \item Spans $V$: for all $\vec v\in V, \vec v = v_i \vec e_i$, for some $v_i\in\R$.
+        \item Linearly independent: $\sum_{i=1}^n v^i\vec e_i = 0$ implies $a_i = 0$ for all $i=1,...,n$.
     \end{itemize}
     The number of elements in a basis $n$ is called the dimension of $V$.
 \end{definition}
@@ -412,12 +412,13 @@
     \begin{align*}
         \vec v = v^i \frac{\p}{\p x^i}\hs\text{and}\hs \vec w = w^i \frac{\p }{\p x^i}
     \end{align*}
-    and if $\lambda\in\R$, then $\lambda v$ and $v+w$ are vector fields defined by
+    and if $\lambda\in\R$, then $\lambda \vec v$ and $\vec v+\vec w$ are vector fields defined by
     \begin{align*}
         \lambda \vec v = \lambda v^i \frac{\p }{\p x^i}\hs\text{and}\hs
         \vec v+\vec w = (v^i+w^i)\frac{\p }{\p x^i}.
     \end{align*}
-    Furthermore, if $f$ is a function then we can define a vector field $fv$ by
+    Furthermore, if $f:D\to\R$ is a function then we can define a vector field
+    $fv$ by
     \begin{align*}
         f\vec v = fv^i\frac{\p }{\p x^i}.
     \end{align*}
@@ -431,14 +432,15 @@
 \end{theorem}
 
 \begin{definition}
-    Given a vector field $\vec v$ and a smooth function $f:\E^n\to\R$, we can define a function 
+    Given a vector field $\vec v:D\to T_pD$ and a smooth function $f:D\to\R$,
+    we can define a function 
     \begin{align*}
-        \vec v(f) = \sum_i v^i\frac{\p f}{\p x^i}.
+        \vec v(f) = v^i\frac{\p f}{\p x^i}.
     \end{align*}
 \end{definition}
 
 \begin{proposition}[Notes 4.7]
-    For all vector fields $\vec v,\vec w:D\to T_pD$ and functions $f,g:\E^n\to\R$, the following identities hold:
+    For all vector fields $\vec v,\vec w:D\to T_pD$ and functions $f,g:D\to\R$, the following identities hold:
     \begin{align*}
         (\vec v+\vec w)(f) &= \vec v(f) + \vec w(f)\\
         (f\vec v)(g)  &= f\vec v(g) \\
@@ -473,6 +475,25 @@
     $p\in D$ and tangent vectors $T_pD$. By (standard) abuse of notation sometimes 
     we denote $c'_p$ by the corresponding velocity $c'(0)$.
 \end{corollary}
+
+\begin{definition}[Notes Exercise 4.30]
+    Let $\vec u,\vec v:D\to T_pD$ be vector fields. Then the \emph{Lie bracket} is defined as 
+    \begin{align*}
+        [\vec u, \vec v] = \vec u(\vec v(f)) - \vec v(\vec u(f)) 
+        = \left(\vec u(v^k)-\vec v(u^k)\right)\frac{\p f}{\p x^k}.
+    \end{align*}
+\end{definition}
+
+\begin{lemma}
+    Let $\vec u, \vec v, \vec w:D\to T_pD$ be vector fields and let $f:D\to\R$ be a
+    function. Then 
+    \begin{align*}
+        [\vec v, \vec u] &= -[\vec u, \vec v],\\
+        [\vec u, [\vec v, \vec w]] + [\vec v, [\vec w, \vec u]] + [\vec w, [\vec u, \vec v]] &= 0,\\
+        [f\vec u, \vec v] &= f[\vec u,\vec v]-\vec v(f)\vec u,\\
+        [\vec u, f\vec v] &= f[\vec u,\vec v]+\vec v(f)\vec u.
+    \end{align*}
+\end{lemma}
 
 \subsection{One-forms}
 
