--- a/2021_22/GEO/notes/notes.tex
+++ b/2021_22/GEO/notes/notes.tex
@@ -1131,11 +1131,11 @@ local surface.
 
 \subsection{Umbilical points and surfaces}
 
-\begin{theorem}
+\begin{theorem}[Notes 9.19]
     A regular surface has $\I=0$ iff it is (a piece of) a plane.
 \end{theorem}
 
-\begin{theorem}
+\begin{theorem}[Notes 9.20]
     A regular local surface has $\I = \lambda I$ where $\lambda \not=0$ is a constant iff 
     the surface is (a piece of) a sphere with radius $1/\abs\lambda$.
 \end{theorem}
@@ -1145,11 +1145,11 @@ local surface.
     directions are principal at such a point.
 \end{definition}
 
-\begin{lemma}
+\begin{lemma}[Notes 9.22]
     For any surface $K\leq H^2$, with equality only at umbilical points.
 \end{lemma}
 
-\begin{theorem}
+\begin{theorem}[Notes 9.23]
     A regular local surface for which every point is umbilical, is either part of a sphere 
     or a plane.
 \end{theorem}
