GEO: Exam setup done

--- a/2021_22/GEO/notes/notes.tex
+++ b/2021_22/GEO/notes/notes.tex
@@ -1586,7 +1586,7 @@ Let $\vec x: D \to \E^3$ be an oriented local surface.
     of a single local surface on which we have an adapted frame.
 \end{definition}
 
-\begin{proposition}
+\begin{proposition}[Notes 15.2]
     Let $t\mapsto \vec x(c(t)), t\in[a,b]$, be a geodesic in a local surface and $(\vec e_1, \vec e_2)$
     be an adapted moving frame for the surface. Let $\theta(t)$ be such that 
     \begin{align*}
@@ -1598,7 +1598,7 @@ Let $\vec x: D \to \E^3$ be an oriented local surface.
     \end{align*}
 \end{proposition}
 
-\begin{theorem}
+\begin{theorem}[Notes 15.3]
     Let $\Delta$ be a geodesic triangle on a local surface with interior angles $\alpha$, $\beta$,
     $\gamma$. Assume $\Delta$ is contractible to a point. Then 
     \begin{align*}
@@ -1606,7 +1606,7 @@ Let $\vec x: D \to \E^3$ be an oriented local surface.
     \end{align*}
 \end{theorem}
 
-\begin{corollary}
+\begin{corollary}[Notes 15.4]
     Let $\Delta$ be a geodesic triangle with angles $\alpha,\beta,\gamma$ and area $A(\Delta)$.
     We have 
     \begin{enumerate}
@@ -1627,7 +1627,7 @@ Let $\vec x: D \to \E^3$ be an oriented local surface.
     \end{align*}
 \end{definition}
 
-\begin{proposition}
+\begin{proposition}[Notes 15.8]
     The Euler characteristic of a surface is independent of the particular dissection chosen.
     Furthermore, it is unchanged by reasonable deformations of the surface.
 \end{proposition}
@@ -1646,5 +1646,15 @@ Let $\vec x: D \to \E^3$ be an oriented local surface.
         \chi(\Sigma) = \frac{1}{2\pi}\int_\Sigma K.
     \end{align*} 
 \end{theorem}
+
+\begin{corollary}[Notes 15.15]
+    Suppose $\Sigma$ is any surface obtained by a smooth deformation of a sphere,
+    so $\chi=2$. Then there must be a point on $\Sigma$ where $K>0$. 
+\end{corollary}
+
+\begin{corollary}[Notes 15.16]
+    Suppose $\Sigma$ is any surface obtained by a smooth deformation of a torus, 
+    so $\chi=0$. Then the Gauss curvature of $\Sigma$ must change sign. 
+\end{corollary}
 
 \end{document}
