GEO: Final notes

--- a/2021_22/GEO/notes/notes.tex
+++ b/2021_22/GEO/notes/notes.tex
@@ -4,6 +4,7 @@
 \begin{document}
 \title{Geometry (SEM5)}
 \author{Franz Miltz}
+\date{9 December 2021}
 \maketitle
 \noindent Textbook: K. Tapp, \emph{Differential Geometry of Curves and Surfaces}
 \tableofcontents
