HANA: Improve theorem numbering

--- a/2021_22/HANA/notes/notes.tex
+++ b/2021_22/HANA/notes/notes.tex
@@ -2,7 +2,7 @@
 \usepackage{notes-preamble}
 \usepackage{enumitem}
 \begin{document}
-\mkfpmthms
+\mkthmstwounified
 \title{Honours Analysis (SEM5)}
 \author{Franz Miltz}
 \maketitle
